--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                 <label for="super inteligencia" class="super"> Super inteligencia</label>
                 <label for="vista de raio laser" class="raio">Vista de raio laser</label>
                 <label for="super rico" class="rico">Super rico</label>
+                <form action="">
+                    <p class="inicio">*Nome</p>
+                    <input type="text" class="texto2">
+                </form>
                 <div class="traço"></div>
                 <p class="tipo"> Tipo de personagem</p>
                 <label for="Herói/heroina" class="heroi">Herói/heroina</label>
